# docs/swagger.json
@@ -26,6 +26,9 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "Account"
+                ],
                 "summary": "This endpoint creates a new account",
                 "parameters": [
                     {
@@ -180,7 +183,7 @@
         "dto.AccountPresenterResponse": {
             "type": "object",
             "properties": {
-                "accountID": {
+                "account_id": {
                     "type": "integer"
                 },
                 "document_number": {
